cmake_minimum_required(VERSION 3.5.0)
project(asteroids VERSION 0.1.0 LANGUAGES C)

find_package(X11 REQUIRED)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    message("Compiling on Linux.")
    add_executable(asteroids main.c platform_linux.c game.c)
    target_include_directories(asteroids PRIVATE /usr/include/X11)
    target_link_options(asteroids PRIVATE -lX11 -lm)
    target_link_libraries(asteroids PRIVATE X11 m)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    message("Compiling on Windows.")
    add_compile_definitions(WINDOWS)
endif()